--- a/javascript/projeto_banco/styles.css
+++ b/javascript/projeto_banco/styles.css
@@ -46,3 +46,10 @@ header {
     font-weight: bold;
     font-size: 1.2rem;
 }
+
+#saida {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px;
+}
